move to custom es image

--- a/openstack/hermes/templates/elasticsearch-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-deployment.yaml
@@ -52,7 +52,7 @@ spec:
             claimName: hermes-elasticsearch
       containers:
         - name: elasticsearch
-          image: docker.elastic.co/elasticsearch/elasticsearch-oss:{{.Values.hermes_image_version_elasticsearch}}
+          image: hub.global.cloud.sap/monsoon/hermes-elasticsearch:{{.Values.hermes_image_version_elasticsearch}}
           imagePullPolicy: IfNotPresent
           securityContext:
             runAsUser: 1000
