[nova] Define resource requests
These are based on the spikes found in prometheus in the last couple of
weeks.

--- a/openstack/nova/templates/api-deployment.yaml
+++ b/openstack/nova/templates/api-deployment.yaml
@@ -85,6 +85,10 @@ spec:
             initialDelaySeconds: 15
             timeoutSeconds: 5
 {{- end }}
+          resources:
+            requests:
+              cpu: "12000m"
+              memory: "13Gi"
           ports:
             - name: nova-api
               containerPort: {{.Values.global.novaApiPortInternal}}
