--- a/openstack/nova/templates/api-metadata-deployment.yaml
+++ b/openstack/nova/templates/api-metadata-deployment.yaml
@@ -79,6 +79,10 @@ spec:
               port: {{.Values.global.novaApiMetadataPortInternal}}
             initialDelaySeconds: 15
             timeoutSeconds: 5
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "3Gi"
           ports:
             - name: nova-metdata
               containerPort: {{.Values.global.novaApiMetadataPortInternal}}
