--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-deployment-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-deployment-vct.yaml
@@ -62,6 +62,10 @@ template: |
             value: "ignore:Unverified HTTPS request"
           - name: PGAPPNAME
             value: nova-compute-{= name =}
+          resources:
+            requests:
+              cpu: "1000m"
+              memory: "1Gi"
           volumeMounts:
           - mountPath: /etc/nova
             name: etcnova
@@ -117,6 +121,10 @@ template: |
               - bash
               - -c
               - "[ -f /tmp/neutron-dvs-agent.alive ] && [ $(($(date +%s) - $(date -r /tmp/neutron-dvs-agent.alive +%s))) -lt 300 ]"
+          resources:
+            requests:
+              cpu: "1000m"
+              memory: "2Gi"
           volumeMounts:
           - mountPath: /etc/neutron
             name: etcneutron
