--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-neutron-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-neutron-configmap-vct.yaml
@@ -33,4 +33,7 @@ template: |
       vsphere_password = {= password | quote =}
 
       network_maps = "{= physical | ini_escape =}:{= bridge | ini_escape =}"
+
+      [DVS]
+      portgroup_retention_iterations = 50
 {{ end }}
