--- a/openstack/nova/templates/placement-api-deployment.yaml
+++ b/openstack/nova/templates/placement-api-deployment.yaml
@@ -60,6 +60,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          resources:
+            requests:
+              cpu: "400m"
+              memory: "150Mi"
           ports:
             - name: placement-api
               containerPort: {{.Values.global.placementApiPortInternal}}
