[cinder] Define resource requests

--- a/openstack/cinder/templates/api-deployment.yaml
+++ b/openstack/cinder/templates/api-deployment.yaml
@@ -77,6 +77,10 @@ spec:
               port: cinder-api
             initialDelaySeconds: 15
             timeoutSeconds: 5
+          resources:
+            requests:
+              cpu: "1500m"
+              memory: "5Gi"
           ports:
             - name: cinder-api
               containerPort: {{.Values.cinderApiPortInternal }}
