--- a/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
+++ b/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
@@ -65,6 +65,10 @@ template: |{{`
             initialDelaySeconds: 60
             periodSeconds: 10
             failureThreshold: 3
+          resources:
+            requests:
+              cpu: "500m"
+              memory: "1.5Gi"
           volumeMounts:
           - name: etccinder
             mountPath: /etc/cinder
