--- a/openstack/swift/templates/proxy-deployment.yaml
+++ b/openstack/swift/templates/proxy-deployment.yaml
@@ -169,7 +169,28 @@ spec:
             - mountPath: /swift-rings/object
               name: swift-object-ring
         {{- end}}
-        {{- include "swift_statsd_exporter_container" $ | indent 8 }}
+        - name: statsd
+          image: prom/statsd-exporter:{{$.Values.image_version_auxiliary_statsd_exporter}}
+          args: [ --statsd.mapping-config=/swift-etc/statsd-exporter.yaml ]
+          {{- if $.Values.resources.enabled }}
+          resources:
+            # observed usage: CPU = 10m-100m, RAM = 550-950 MiB
+            requests:
+              cpu: "120m"
+              memory: "1024Mi"
+            limits:
+              cpu: "120m"
+              memory: "1024Mi"
+          {{- end }}
+          ports:
+            - name: statsd
+              containerPort: 9125
+              protocol: UDP
+            - name: metrics
+              containerPort: 9102
+          volumeMounts:
+            - mountPath: /swift-etc
+              name: swift-etc
 
 ---
 {{end}}
