--- a/openstack/swift/templates/statsd-exporter-daemonset.yaml
+++ b/openstack/swift/templates/statsd-exporter-daemonset.yaml
@@ -31,4 +31,15 @@ spec:
           configMap:
             name: swift-etc
       containers:
-        {{- include "swift_statsd_exporter_container" . | indent 8 }}
+        - name: statsd
+          image: prom/statsd-exporter:{{.Values.image_version_auxiliary_statsd_exporter}}
+          args: [ --statsd.mapping-config=/swift-etc/statsd-exporter.yaml ]
+          ports:
+            - name: statsd
+              containerPort: 9125
+              protocol: UDP
+            - name: metrics
+              containerPort: 9102
+          volumeMounts:
+            - mountPath: /swift-etc
+              name: swift-etc
