--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -122,11 +122,14 @@ pgmetrics:
             usage: "GAUGE"
             description: "Number of share networks"
     openstack_manila_shares:
-      query: "SELECT coalesce(share_instances.share_type_id, 'N/A') AS share_type_id, share_instances.host, shares.project_id, shares.id, share_instances.status, COUNT(*) AS count_gauge, SUM(size) size_gauge FROM shares INNER JOIN share_instances ON shares.id=share_instances.share_id GROUP BY share_instances.share_type_id, share_instances.host, share_instances.status, shares.id, shares.project_id"
+      query: "SELECT coalesce(share_instances.share_type_id, 'N/A') AS share_type_id, availability_zones.name AS availability_zone_name, share_instances.host, shares.project_id, shares.id, share_instances.status, COUNT(*) AS count_gauge, SUM(size) size_gauge FROM shares JOIN share_instances ON shares.id=share_instances.share_id JOIN availability_zones ON share_instances.availability_zone_id=availability_zones.id GROUP BY share_instances.share_type_id, share_instances.host, share_instances.status, shares.id, shares.project_id, availability_zones.id"
       metrics:
         - share_type_id:
             usage: "LABEL"
             description: "Type of the share"
+        - availability_zone_name:
+            usage: "LABEL"
+            description: "Availability Zone Name of the share"            
         - host:
             usage: "LABEL"
             description: "Host Name"
