add some required

--- a/global/prometheus/templates/deployment.yaml
+++ b/global/prometheus/templates/deployment.yaml
@@ -26,10 +26,10 @@ spec:
           args:
             - --config.file=/etc/prometheus/prometheus.yaml
             - --storage.tsdb.path=/prometheus
-            - --storage.tsdb.retention={{.Values.retention}}
+            - --storage.tsdb.retention.time={{ required ".Values.retention" .Values.retention }}
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
-            - --web.external-url=https://prometheus.global.{{.Values.global.domain}}
+            - --web.external-url=https://prometheus.global.{{ required ".Values.global.domain" .Values.global.domain }}
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.log_level }}
