[content-repo] add 'dist' field if job.from.type is 'debian'

--- a/openstack/content-repo/templates/configmap.yaml
+++ b/openstack/content-repo/templates/configmap.yaml
@@ -37,6 +37,9 @@ data:
           {{- if $job.from.type }}
           arch: {{ coalesce $job.from.arch "[]" }}
           {{- end }}
+          {{- if eq (coalesce $job.from.type "''") "debian" }}
+          dist: {{ coalesce $job.from.dist "[]" }}
+          {{- end }}
           cert: {{ coalesce $job.from.cert $config.cert "''" }}
           key:  {{ coalesce $job.from.key $config.key "''" }}
           ca:   {{ coalesce $job.from.ca $config.ca "''" }}
