--- a/openstack/content-repo/templates/configmap.yaml
+++ b/openstack/content-repo/templates/configmap.yaml
@@ -35,7 +35,7 @@ data:
           url:  {{$job.from.url}}
           type: {{ coalesce $job.from.type "''" }}
           {{- if $job.from.type }}
-          arch: {{ coalesce $job.from.arch "[]" }}
+          arch: {{ coalesce $job.from.arch [] | toJson }}
           {{- end }}
           {{- if eq (coalesce $job.from.type "''") "debian" }}
           dist: {{ coalesce $job.from.dist "[]" }}
