--- a/openstack/content-repo/templates/configmap.yaml
+++ b/openstack/content-repo/templates/configmap.yaml
@@ -38,7 +38,7 @@ data:
           arch: {{ coalesce $job.from.arch [] | toJson }}
           {{- end }}
           {{- if eq (coalesce $job.from.type "''") "debian" }}
-          dist: {{ coalesce $job.from.dist "[]" }}
+          dist: {{ coalesce $job.from.dist [] | toJson }}
           {{- end }}
           cert: {{ coalesce $job.from.cert $config.cert "''" }}
           key:  {{ coalesce $job.from.key $config.key "''" }}
