next attempt to fix this syntax

--- a/openstack/content-repo/templates/configmap.yaml
+++ b/openstack/content-repo/templates/configmap.yaml
@@ -34,11 +34,11 @@ data:
           {{- if $job.from.url }}
           url:  {{$job.from.url}}
           type: {{ coalesce $job.from.type "''" }}
-          {{- if $job.from.type }}
-          arch: {{ coalesce $job.from.arch [] | toJson }}
+          {{- if $job.from.arch }}
+          arch: {{ toJson $job.from.arch }}
           {{- end }}
-          {{- if eq (coalesce $job.from.type "''") "debian" }}
-          dist: {{ coalesce $job.from.dist [] | toJson }}
+          {{- if $job.from.dist }}
+          dist: {{ toJson $job.from.dist }}
           {{- end }}
           cert: {{ coalesce $job.from.cert $config.cert "''" }}
           key:  {{ coalesce $job.from.key $config.key "''" }}
