[manila] add resources requests (#646)
and limit for manila-share

--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -220,6 +220,34 @@ pod:
         rolling_update:
            max_unavailable: 0
            max_surge: 1
+  resources:
+    api:
+      requests:
+        memory: "1Gi"
+        cpu: "1000m"
+    scheduler:
+      requests:
+        memory: "256Mi"
+        cpu: "1000m"
+    netapp_nanny:
+      requests:
+        memory: "2Gi"
+        cpu: "500m"
+    nanny_quota:
+      requests:
+        memory: "64Mi"
+        cpu: "300m"
+    nanny:
+      requests:
+        memory: "64Mi"
+        cpu: "50m"
+    share: # is not scalable -> qosClass: guaranteed
+      requests:
+        memory: "256Mi"
+        cpu: "100m"
+      limits:
+        memory: "1Gi"
+        cpu: "400m"
 
 postgresql:
   custom_configmap: false
