federate the asa cfwHardwareStatusValue metric as well

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -157,6 +157,7 @@ data:
           - '{__name__=~"^scrape_duration_seconds"}'
           - '{__name__=~"^security_group_(max|total)_entanglement$"}'
           - '{__name__=~"^skydns_.+"}'
+          - '{__name__=~"^snmp_asa_cfwHardwareStatusValue"}'
           - '{__name__=~"^snmp_asr_.+"}'
           - '{__name__=~"^snmp_arista_dot1qVlanFdbId"}'
           - '{__name__=~"^snmp_f5_.+"}'
