--- a/system/kube-system/charts/kubernetes-dashboard/templates/deployment.yaml
+++ b/system/kube-system/charts/kubernetes-dashboard/templates/deployment.yaml
@@ -27,3 +27,6 @@ spec:
               port: 9090
             initialDelaySeconds: 30
             timeoutSeconds: 30
+{{- if .Values.rbac.enabled -}}
+      serviceAccountName: kubernetes-dashboard
+{{- end }}
