added cp domain seeds

--- a/openstack/billing/templates/seeds.yaml
+++ b/openstack/billing/templates/seeds.yaml
@@ -153,6 +153,44 @@ spec:
         role: masterdata_viewer
         inherited: true
 
+  - name: cp
+    groups:
+    - name: CP_API_SUPPORT
+      roles:
+      - project: api_support
+        role: masterdata_admin
+      - domain: cp
+        role: masterdata_admin
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: masterdata_admin
+      - domain: cp
+        role: masterdata_viewer
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: masterdata_admin
+      - domain: cp
+        role: masterdata_viewer
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: masterdata_admin
+      - domain: cp
+        role: masterdata_viewer
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: masterdata_admin
+      - domain: cp
+        role: masterdata_viewer
+        inherited: true
+
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
