--- a/openstack/designate/templates/seeds.yaml
+++ b/openstack/designate/templates/seeds.yaml
@@ -15,6 +15,7 @@ spec:
   - monsoon3/domain-cc3test-seed
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-fsn-seed
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
@@ -172,6 +173,23 @@ spec:
     - name: BS_DOMAIN_DNS_OPS
       roles:
       - domain: bs
+        role: cloud_dns_ops
+        inherited: true
+    roles:
+    - user: admin@Default
+      role: cloud_dns_admin
+      inherited: true
+
+  - name: cp
+    groups:
+    - name: CP_DOMAIN_DNS_SUPPORT
+      roles:
+      - domain: cp
+        role: cloud_dns_support
+        inherited: true
+    - name: CP_DOMAIN_DNS_OPS
+      roles:
+      - domain: cp
         role: cloud_dns_ops
         inherited: true
     roles:
