--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -11,6 +11,7 @@ spec:
   requires:
   - monsoon3/domain-default-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-fsn-seed
   - monsoon3/domain-hcp03-seed
@@ -162,6 +163,44 @@ spec:
       - domain: bs
         role: cloud_support_tools_viewer
       - domain: bs
+        role: cloud_support_tools_viewer
+        inherited: true
+
+  - name: cp
+    groups:
+    - name: CP_API_SUPPORT
+      roles:
+      - domain: cp
+        role: cloud_support_tools_viewer
+      - domain: cp
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - domain: cp
+        role: cloud_support_tools_viewer
+      - domain: cp
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - domain: cp
+        role: cloud_support_tools_viewer
+      - domain: cp
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - domain: cp
+        role: cloud_support_tools_viewer
+      - domain: cp
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - domain: cp
+        role: cloud_support_tools_viewer
+      - domain: cp
         role: cloud_support_tools_viewer
         inherited: true
 
