--- a/openstack/hermes/templates/keystone-seed.yaml
+++ b/openstack/hermes/templates/keystone-seed.yaml
@@ -138,6 +138,44 @@ spec:
           role: audit_viewer
           inherited: true
 
+    - name: cp
+      groups:
+      - name: CP_API_SUPPORT
+        roles:
+        - project: api_support
+          role: audit_viewer
+        - domain: cp
+          role: audit_viewer
+          inherited: true
+      - name: CP_COMPUTE_SUPPORT
+        roles:
+        - project: compute_support
+          role: audit_viewer
+        - domain: cp
+          role: audit_viewer
+          inherited: true
+      - name: CP_NETWORK_SUPPORT
+        roles:
+        - project: network_support
+          role: audit_viewer
+        - domain: cp
+          role: audit_viewer
+          inherited: true
+      - name: CP_STORAGE_SUPPORT
+        roles:
+        - project: storage_support
+          role: audit_viewer
+        - domain: cp
+          role: audit_viewer
+          inherited: true
+      - name: CP_SERVICE_DESK
+        roles:
+        - project: service_desk
+          role: audit_viewer
+        - domain: cp
+          role: audit_viewer
+          inherited: true
+
     - name: hcm
       groups:
       - name: HCM_API_SUPPORT
