--- a/openstack/limes/templates/seed.yaml
+++ b/openstack/limes/templates/seed.yaml
@@ -16,6 +16,7 @@ spec:
   - monsoon3/designate-seed
   - swift/swift-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-cc3test-seed
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-default-seed
@@ -105,6 +106,13 @@ spec:
       - name: CC3TEST_DOMAIN_RESOURCE_ADMINS
         roles:
         - domain: cc3test
+          role: resource_admin
+
+    - name: cp
+      groups:
+      - name: CP_DOMAIN_RESOURCE_ADMINS
+        roles:
+        - domain: cp
           role: resource_admin
 
     - name: fsn
