--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -14,6 +14,7 @@ spec:
   - monsoon3/domain-cc3test-seed
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-fsn-seed
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
@@ -189,6 +190,52 @@ spec:
       - project: service_desk
         role: network_admin
       - domain: bs
+        role: network_viewer
+        inherited: true
+
+  - name: cp
+    groups:
+    - name: CP_DOMAIN_NETWORK_ADMINS
+      roles:
+      - project: cp-net-infra
+        role: network_admin
+      - project: cp-net-infra
+        role: cloud_network_admin
+      - project: cp-shared-infra
+        role: network_admin
+    - name: CP_API_SUPPORT
+      roles:
+      - project: api_support
+        role: network_admin
+      - domain: cp
+        role: network_admin
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: network_admin
+      - domain: cp
+        role: network_viewer
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: network_admin
+      - domain: cp
+        role: network_admin
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: network_admin
+      - domain: cp
+        role: network_viewer
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: network_admin
+      - domain: cp
         role: network_viewer
         inherited: true
 
