--- a/openstack/swift-utils/templates/seed.yaml
+++ b/openstack/swift-utils/templates/seed.yaml
@@ -15,6 +15,7 @@ spec:
     - swift/swift-seed #  and all its dependencies
     - monsoon3/domain-default-seed
     - monsoon3/domain-bs-seed
+    - monsoon3/domain-cp-seed
     - monsoon3/domain-ccadmin-seed
     - monsoon3/domain-fsn-seed
     - monsoon3/domain-hcp03-seed
@@ -40,6 +41,8 @@ spec:
           - domain: ccadmin
             role: admin
           - domain: bs
+            role: admin
+          - domain: cp
             role: admin
           - domain: fsn
             role: admin
