--- a/openstack/arc/templates/seed.yaml
+++ b/openstack/arc/templates/seed.yaml
@@ -89,6 +89,34 @@ spec:
         role: automation_viewer
         inherited: true
 
+  - name: cp
+    groups:
+    - name: CP_API_SUPPORT
+      roles:
+      - domain: cp
+        role: automation_admin
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - domain: cp
+        role: automation_viewer
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - domain: cp
+        role: automation_viewer
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - domain: cp
+        role: automation_viewer
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - domain: cp
+        role: automation_viewer
+        inherited: true
+
   - name: fsn
     groups:
     - name: FSN_API_SUPPORT
