--- a/openstack/cinder/templates/seed.yaml
+++ b/openstack/cinder/templates/seed.yaml
@@ -8,6 +8,7 @@ spec:
   - monsoon3/domain-cc3test-seed
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-fsn-seed
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
@@ -175,6 +176,44 @@ spec:
       - project: service_desk
         role: volume_admin
       - domain: bs
+        role: volume_viewer
+        inherited: true
+
+  - name: cp
+    groups:
+    - name: CP_API_SUPPORT
+      roles:
+      - project: api_support
+        role: volume_admin
+      - domain: cp
+        role: volume_admin
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: volume_admin
+      - domain: cp
+        role: volume_viewer
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: volume_admin
+      - domain: cp
+        role: volume_viewer
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: volume_admin
+      - domain: cp
+        role: volume_admin
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: volume_admin
+      - domain: cp
         role: volume_viewer
         inherited: true
 
