--- a/openstack/maia/templates/seed.yaml
+++ b/openstack/maia/templates/seed.yaml
@@ -12,6 +12,7 @@ spec:
   - monsoon3/domain-ccadmin-seed
   - monsoon3/domain-monsoon3-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-fsn-seed
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
@@ -132,6 +133,44 @@ spec:
       - project: service_desk
         role: monitoring_admin
       - domain: bs
+        role: monitoring_viewer
+        inherited: true
+
+  - name: cp
+    groups:
+    - name: CP_API_SUPPORT
+      roles:
+      - project: api_support
+        role: monitoring_admin
+      - domain: cp
+        role: monitoring_admin
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: monitoring_admin
+      - domain: cp
+        role: monitoring_viewer
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: monitoring_admin
+      - domain: cp
+        role: monitoring_viewer
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: monitoring_admin
+      - domain: cp
+        role: monitoring_viewer
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: monitoring_admin
+      - domain: cp
         role: monitoring_viewer
         inherited: true
 
