--- a/openstack/sap-seeds/templates/nova-seed.yaml
+++ b/openstack/sap-seeds/templates/nova-seed.yaml
@@ -6,6 +6,7 @@ spec:
   requires:
   - monsoon3/nova-seed
   - monsoon3/domain-bs-seed
+  - monsoon3/domain-cp-seed
   - monsoon3/domain-fsn-seed
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
@@ -48,6 +49,44 @@ spec:
       - project: service_desk
         role: compute_admin
       - domain: bs
+        role: compute_viewer
+        inherited: true
+
+  - name: cp
+    groups:
+    - name: CP_API_SUPPORT
+      roles:
+      - project: api_support
+        role: compute_admin
+      - domain: cp
+        role: compute_admin
+        inherited: true
+    - name: CP_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: compute_admin
+      - domain: cp
+        role: compute_admin
+        inherited: true
+    - name: CP_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: compute_admin
+      - domain: cp
+        role: compute_viewer
+        inherited: true
+    - name: CP_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: compute_admin
+      - domain: cp
+        role: compute_viewer
+        inherited: true
+    - name: CP_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: compute_admin
+      - domain: cp
         role: compute_viewer
         inherited: true
 
