--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -1,3 +1,11 @@
+global:
+  region: DEFINED-AS-VALUE
+  domain: DEFINED-AS-VALUE
+
+prometheus:
+  image: prom/prometheus
+  tag: v2.8.0
+
 cloudprober-exporter:
   enabled: false
 
@@ -6,3 +14,7 @@ netapp-exporter:
 
 apic_exporters:
   enabled: false
+
+arista_exporter:
+  enabled: false
+  configmap_name: arista-sd
