iris: add envs for admin client credentials

--- a/global/iris/charts/api/templates/deployment.yaml
+++ b/global/iris/charts/api/templates/deployment.yaml
@@ -29,6 +29,10 @@ spec:
           env:
             - name: REGION
               value: {{ .Values.region }}
+            - name: ADMIN_API_KEY
+              value: {{ .Values.admin_api_key}}
+            - name: ADMIN_API_SECRET
+              value: {{ .Values.admin_api_secret}}
             - name: IRIS_API_DB_PASSWORD
               valueFrom: { secretKeyRef:    { name: {{ template "postgresql.fullname" . }}, key: postgres-password } }  
           livenessProbe:
