--- a/global/concourse/templates/daemonset.yaml
+++ b/global/concourse/templates/daemonset.yaml
@@ -28,18 +28,103 @@ spec:
         effect: "NoSchedule"
       serviceAccountName: concourse-worker
       initContainers:
-      - name: {{ $.Values.worker.name }}-{{ .name }}-init-rm
-        image: "{{ $.Values.concourse.image }}:{{ $.Values.concourse.imageTag }}"
+      # create volume
+      - name: {{ $.Values.worker.name }}-{{ .name }}-create-work-dir
+        image: "hub.global.cloud.sap/d074427/openstack-btrfs:latest"
         imagePullPolicy: {{ $.Values.concourse.imagePullPolicy | quote }}
         command:
         - /bin/sh
         args:
         - -ce
         - |-
-          rm -rf {{ $.Values.concourse.concourse.worker.workDir }}/*
+          VOLUME_NAME=${NODE_NAME}-{{ $.Values.worker.name }}-{{ .name }}-work-dir
+          if [ ! $(openstack volume list --name  ${VOLUME_NAME} -f value) ]; then
+            openstack volume create \
+              --availability-zone ${WORK_DIR_AZ} \
+              --size ${WORK_DIR_SIZE_GB} \
+              --property "concourse-team={{ .name }}" \
+              --property "concourse-worker=${NODE_NAME}" \
+              ${VOLUME_NAME}
+          fi
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: OS_AUTH_URL
+          value: {{ $.Values.openstack.auth_url }}
+        - name: OS_AUTH_TYPE
+          value: {{ $.Values.openstack.auth_type }}
+        - name: OS_APPLICATION_CREDENTIAL_ID
+          value: {{ $.Values.openstack.application_credential_id }}
+        - name: OS_APPLICATION_CREDENTIAL_SECRET
+          value: {{ $.Values.openstack.application_credential_secret }}
+        - name: WORK_DIR_AZ
+          value: {{ $.Values.worker.workDirVolumeAZ }}
+        - name: WORK_DIR_SIZE_GB
+          value: {{ $.Values.worker.workDirVolumeSizeGb | quote }}
+      # attach volume to node
+      - name: {{ $.Values.worker.name }}-{{ .name }}-attach-work-dir
+        image: "hub.global.cloud.sap/d074427/openstack-btrfs:latest"
+        imagePullPolicy: {{ $.Values.concourse.imagePullPolicy | quote }}
+        command:
+        - /bin/sh
+        args:
+        - -ce
+        - |-
+          VOLUME_NAME=${NODE_NAME}-{{ $.Values.worker.name }}-{{ .name }}-work-dir
+          if [ ! $(openstack volume list --name  ${VOLUME_NAME} -f value | grep in-use) ]; then
+            openstack server add volume ${NODE_NAME} ${VOLUME_NAME}
+          fi
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: OS_AUTH_URL
+          value: {{ $.Values.openstack.auth_url }}
+        - name: OS_AUTH_TYPE
+          value: {{ $.Values.openstack.auth_type }}
+        - name: OS_APPLICATION_CREDENTIAL_ID
+          value: {{ $.Values.openstack.application_credential_id }}
+        - name: OS_APPLICATION_CREDENTIAL_SECRET
+          value: {{ $.Values.openstack.application_credential_secret }}
+      # format volume and mount
+      - name: {{ $.Values.worker.name }}-{{ .name }}-format-work-dir
+        image: "hub.global.cloud.sap/d074427/openstack-btrfs:latest"
+        imagePullPolicy: {{ $.Values.concourse.imagePullPolicy | quote }}
+        securityContext:
+          privileged: true
+        command:
+        - /bin/sh
+        args:
+        - -ce
+        - |-
+          VOLUME_NAME=${NODE_NAME}-{{ $.Values.worker.name }}-{{ .name }}-work-dir
+          VOLUME_ID=`openstack volume show ${VOLUME_NAME} -f value -c id`
+          VOLUME_PATH=/root/dev/disk/by-id/wwn-0x${VOLUME_ID//-/}
+          if [ ! $(df -h | grep ${VOLUME_PATH}) ]; then
+            mkfs.btrfs -f ${VOLUME_PATH} &&
+            mkdir -p /root{{ $.Values.concourse.concourse.worker.workDir }} &&
+            mount -t btrfs ${VOLUME_PATH} /root{{ $.Values.concourse.concourse.worker.workDir }}
+          fi
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: OS_AUTH_URL
+          value: {{ $.Values.openstack.auth_url }}
+        - name: OS_AUTH_TYPE
+          value: {{ $.Values.openstack.auth_type }}
+        - name: OS_APPLICATION_CREDENTIAL_ID
+          value: {{ $.Values.openstack.application_credential_id }}
+        - name: OS_APPLICATION_CREDENTIAL_SECRET
+          value: {{ $.Values.openstack.application_credential_secret }}
         volumeMounts:
-        - name: concourse-work-dir
-          mountPath: {{ $.Values.concourse.concourse.worker.workDir | quote }}
+        - name: root-dir
+          mountPath: /root
+          mountPropagation: Bidirectional
       containers:
       - name: {{ $.Values.worker.name }}-{{ .name }}
         image: "{{ $.Values.concourse.image }}:{{ $.Values.concourse.imageTag }}"
@@ -68,14 +153,12 @@ spec:
               - "SIGUSR2"
               - "1"
         env:
-        {{- if ne .name "main" }}
         - name: CONCOURSE_TEAM
           value: {{ .name | quote }}
-        {{- end }}
         - name: CONCOURSE_BIND_DEBUG_PORT
           value: "9099"
         - name: CONCOURSE_WORK_DIR
-          value: {{ $.Values.concourse.concourse.worker.workDir | quote }}
+          value: {{ $.Values.concourse.concourse.worker.workDir }}
         - name: CONCOURSE_BIND_IP
           value: "127.0.0.1"
         - name: CONCOURSE_BIND_PORT
@@ -87,11 +170,11 @@ spec:
         - name: CONCOURSE_TSA_PUBLIC_KEY
           value: "{{ $.Values.concourse.worker.keySecretsPath }}/host_key.pub"
         - name: CONCOURSE_TSA_WORKER_PRIVATE_KEY
-          value: "{{ $.Values.concourse.worker.keySecretsPath }}/worker_key"
+          value: "/worker-keys/team_worker_key"
         - name: CONCOURSE_GARDEN_BIND_PORT
           value: "7777"
         - name: CONCOURSE_BAGGAGECLAIM_DRIVER
-          value: "naive"
+          value: "btrfs"
         - name: LIVENESS_PROBE_FATAL_ERRORS
           value: |-
             guardian.api.garden-server.create.failed
@@ -109,8 +192,11 @@ spec:
         - name: concourse-keys
           mountPath: {{ $.Values.concourse.worker.keySecretsPath | quote }}
           readOnly: true
+        - name: worker-keys
+          mountPath: /worker-keys
+          readOnly: true
         - name: concourse-work-dir
-          mountPath: {{ $.Values.concourse.concourse.worker.workDir | quote }}
+          mountPath: {{ $.Values.concourse.concourse.worker.workDir }}
         - name: sap-root-certs 
           mountPath: /usr/local/share/ca-certificates
       volumes:
@@ -132,8 +218,20 @@ spec:
             path: worker_key
           - key: worker-key-pub
             path: worker_key.pub
+      - name: worker-keys
+        secret:
+          secretName: {{ template "concourse.concourse.fullname" $ }}-worker
+          defaultMode: 0400
+          items:
+          - key: {{ .name }}-team-authorized-key
+            path: team_worker_key.pub
+          - key: {{ .name }}-team-authorized-privkey
+            path: team_worker_key
       - name: concourse-work-dir
-        emptyDir: {}
-        sizeLimit: 20Gi
+        hostPath:
+          path: {{ $.Values.concourse.concourse.worker.workDir }}
+      - name: root-dir
+        hostPath:
+          path: /
 ---
 {{ end }}
