enable ucsm driver only if mechanism driver actived

--- a/openstack/neutron/templates/deployment-ucs-bm-ml2-agent.yaml
+++ b/openstack/neutron/templates/deployment-ucs-bm-ml2-agent.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.cisco_ucsm_bm -}}
+{{- if contains "cisco_ucsm_bm" .Values.ml2_mechanismdrivers }}
 kind: Deployment
 apiVersion: extensions/v1beta1
 
