--- a/system/sentry/templates/server-deployment.yaml
+++ b/system/sentry/templates/server-deployment.yaml
@@ -13,13 +13,13 @@ spec:
     spec:
       initContainers:
       - name: "upgrade"
-        image: {{required ".Values.image.repository is missing" .Values.image.repository }}:{{required ".Values.image.tag is missing" .Values.image.tag | quote }}
+        image: "{{required ".Values.image.repository is missing" .Values.image.repository }}:{{required ".Values.image.tag is missing" .Values.image.tag }}"
         args: ["upgrade", "--noinput", "--lock"]
         env:
 {{ include "env-vars" . | indent  10 }}
       containers:
       - name: {{ .Chart.Name }}
-        image: {{required ".Values.image.repository is missing" .Values.image.repository }}:{{required ".Values.image.tag is missing" .Values.image.tag | quote }}
+        image: "{{required ".Values.image.repository is missing" .Values.image.repository }}:{{required ".Values.image.tag is missing" .Values.image.tag }}"
         args: [ run, web ]
         #command: [tail, -f, /dev/null]
         imagePullPolicy: {{ .Values.image.pullPolicy }}
