[manila] add cloud_sharedfilesystem_editor
- with the permission to manage share types
- handed out to CCADMIN_STORAGE_SUPPORT

--- a/openstack/manila/templates/seeds.yaml
+++ b/openstack/manila/templates/seeds.yaml
@@ -29,6 +29,7 @@ spec:
 
   roles:
   - cloud_sharedfilesystem_admin
+  - cloud_sharedfilesystem_editor
   - cloud_sharedfilesystem_viewer
   - sharedfilesystem_admin
   - sharedfilesystem_viewer
@@ -129,7 +130,7 @@ spec:
     - name: CCADMIN_STORAGE_SUPPORT
       roles:
       - project: cloud_admin
-        role: cloud_sharedfilesystem_viewer
+        role: cloud_sharedfilesystem_editor
       - project: storage_support
         role: sharedfilesystem_admin
       - project: storage_tools
