alerttest.service_key to not required temporarily
removed required temporarily, because no blocking point - after secret pull request approval it will be required again.

--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -797,7 +797,7 @@ data:
 
     - name: pagerduty_alertchain_test
       pagerduty_configs:
-        - service_key: {{ required "pagerduty.alerttest.service_key undefined" .Values.pagerduty.alerttest.service_key | quote }}
+        - service_key: {{ default "MISSING" .Values.pagerduty.alerttest.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
